added functionality to toggle visibility of a list's tasks, added functionality to create, edit and delete tasks

--- a/src/output.css
+++ b/src/output.css
@@ -521,6 +521,9 @@
   .collapse {
     visibility: collapse;
   }
+  .fixed {
+    position: fixed;
+  }
   .relative {
     position: relative;
   }
